--- a/package.json
+++ b/package.json
@@ -25,5 +25,8 @@
   "bugs": {
     "url": "https://github.com/jefflombard/spark/issues"
   },
-  "homepage": "https://github.com/jefflombard/spark#readme"
+  "homepage": "https://github.com/jefflombard/spark#readme",
+  "engines" : {
+      "node" : ">=8.1.3"
+  }
 }
