--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "spark",
+  "name": "sparc",
   "version": "0.0.1",
   "description": "Create Lightning apps with no build configuration.",
-  "main": "index.js",
+  "main": "spark/spark.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
