--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "sparc",
   "version": "0.0.1",
   "description": "Create Lightning apps with no build configuration.",
-  "main": "sparc.js",
+  "main": "./sparc/sparc.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -31,5 +31,8 @@
   },
   "dependencies": {
     "commander": "^2.12.2"
+  },
+  "bin": {
+    "sparc": "./sparc/sparc.js"
   }
 }
