--- a/package.json
+++ b/package.json
@@ -31,8 +31,7 @@
   },
   "dependencies": {
     "commander": "^2.12.2",
-    "ora": "^1.3.0",
-    "tar": "^4.1.1"
+    "execa": "^0.8.0"
   },
   "bin": {
     "sparc": "./sparc/sparc.js"
