--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
   },
   "dependencies": {
     "commander": "^2.12.2",
-    "execa": "^0.8.0"
+    "execa": "^0.8.0",
+    "listr": "^0.13.0"
   },
   "bin": {
     "sparc": "./sparc/sparc.js"
