--- a/package.json
+++ b/package.json
@@ -30,8 +30,8 @@
     "node": ">=8.1.3"
   },
   "dependencies": {
+    "command-promise": "^2.0.1",
     "commander": "^2.12.2",
-    "execa": "^0.8.0",
     "listr": "^0.13.0"
   },
   "bin": {
